--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "autoprefixer": "^10.2.5",
+    "@ygoe/msgpack": "^1.0.3",
+    "autoprefixer": "^10.2.6",
     "d3": "^6.7.0",
     "lit": "^2.0.0-rc.2",
-    "postcss": "^8.3.0",
+    "postcss": "^8.3.4",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.2",
-    "snowpack": "^3.5.0",
-    "tailwindcss": "^2.1.2"
+    "snowpack": "^3.5.7",
+    "tailwindcss": "^2.1.4"
   },
   "devDependencies": {},
   "scripts": {
